--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
     "react-textarea-autosize": "^8.5.9",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
